--- a/artistas.html
+++ b/artistas.html
@@ -18,7 +18,7 @@
                             <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
                                 <a href="index.html" class="barratexto">Home</a>  
                                 <a href="artistas.html" class="barratexto">Artistas</a>
-                                <a href="albumes.html" class="barratexto">Albumes</a>
+                                <a href="albumes.html" class="barratexto">Álbumes</a>
                                 <a href="generos.html" class="barratexto">Géneros</a>
                                 <a href="playlists.html" class="barratexto">Playlists</a>
                                 <div class="perfil-menu">
@@ -43,31 +43,70 @@
     
                     <li class="caja">
                         <a href="./detail-artist.html" class="names">Justin Bieber</a>
-                        <a href="./detail-artist.html"><img class="fotos" src="./img/justin4.jpg" alt=""></a>
+                        <a href="./detail-artist.html"><img class="fotos" src="./img/bieber.jpg" alt=""></a>
+                        <ul class="bobtopfive">
+                            <p>TOP #5</p>
+                                <li>Sorry</li>
+                                <li>Baby</li>
+                                <li>What do you mean?</li>
+                                <li>Love Yourself</li>
+                                <li>Boyfriend</li>
+                        </ul>
                     </li>
                     <li class="caja">
                         <a href="./detail-artist.html" class="names">Tini</a>
                         <a href="./detail-artist.html"><img class="fotos" src="./img/retratotini2.jpg" alt=""></a>
+                        <ul class="bobtopfive">
+                                 <p>TOP #5</p>
+                                <li>Fresa</li>
+                                <li>Sad Song</li>
+                                <li>Suéltate el pelo</li>
+                                <li>Consejo de amor</li>
+                                <li>Quiero volver</li>
+                        </ul>
                     </li>
                     <li class="caja">
                         <a href="./detail-artist.html" class="names">Bob Marley</a>
-                        <a href="./detail-track.html"><img class="fotos" src="./img/bob-marley.jpg" alt=""></a>
+                        <a href="./detail-artist.html"><img class="fotos" src="./img/bob-marley.jpg" alt=""></a>
+                        <ul class="bobtopfive">
+                            <p>TOP #5</p>
+                            <li>Three Little Birds</li>
+                            <li>Could You Be Loved</li>
+                            <li>Is This Love</li>
+                            <li>Jamming</li>
+                            <li>One Love / People Get Ready</li>
+                    </ul>
                     </li>
                     <li class="caja">
                         <a href="./detail-artist.html" class="names">Ricky Martin</a>
                         <a href="./detail-artist.html"><img class="fotos" src="./img/ricky2.jpg" alt=""></a>
+                        <ul class="bobtopfive">
+                            <p>TOP #5</p>
+                            <li>Livin' la vida loca</li>
+                            <li>La copa de la vida</li>
+                            <li>La Mordidita</li>
+                            <li>Maria</li>
+                            <li>Vente pa'ca</li>
+                    </ul>
                     </li>
                     <li class="caja">
                         <a href="./detail-artist.html" class="names">Harry Styles</a>
                         <a href="./detail-artist.html"><img class="fotos" src="./img/harry2.png" alt=""></a>
+                        <ul class="bobtopfive">
+                            <p>TOP #5</p>
+                            <li>Adore You</li>
+                            <li>Falling</li>
+                            <li>Lights Up</li>
+                            <li>Sign of the Times</li>
+                            <li>Watermelon Sugar</li>
+                    </ul>
                     </li>
                 </ul>
         </section>
             </main>
-            <footer> <div class="footer">
-                
+            <footer> <div class="footer">  
                 <div class="instagram">
-                        <div class="seguinos">Seguinos:</div>
+                        <div class="names">Seguinos:</div>
                         <div>
                         <a href="https://www.instagram.com/"><img src="./img/instagram-logo-3.png" alt="instagram" class="instagram"></a>
                         </div>
@@ -83,5 +122,5 @@
                 </div>
         </div>
                  </footer>
-</body>
-</html>
+        </body>
+        </html>
