--- a/detail-album.html
+++ b/detail-album.html
@@ -3,161 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link  rel="icon"   href="img/logosoundnow.jpeg" type="image/png" />
-    <title>Detalles del Album</title>
+    <title>Detalle del Álbum</title>
 </head>
-<body>
-        <header>
-                <article class="cajainicio">
-                    <nav class="header-items">
-                        <section class="BarraDeBusqueda">
-                                <div class="menu">
-                                    <a href="index.html"><img class="logoheader" src="./img/logosoundnow.jpeg" alt="logo"></a>
-                                    <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
-                                        <a href="index.html" class="barratexto">Home</a>  
-                                        <a href="artistas.html" class="barratexto">Artistas</a>
-                                        <a href="albumes.html" class="barratexto">Albumes</a>
-                                        <a href="generos.html" class="barratexto">Géneros</a>
-                                        <a href="playlists.html" class="barratexto">Playlists</a>
-                                        <div class="perfil-menu">
-                                <section class="icperfil">
-                                        <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user">Log in</h1></a>
-                                </section>
-                        </div>
-                                </div>
-                                <form action="search-results.html" method="GET" class="buscar">
-                                    <input class= "b" id= "ba" type="text" name="search" placeholder = "Search">
-                                    <button type="submit" class="button">Buscar</button>
-                            </form>
+<header>
+        <article class="cajainicio">
+            <nav class="header-items">
+                <section class="BarraDeBusqueda">
+                        <div class="menu">
+                            <a href="index.html"><img class="logoheader" src="./img/logosoundnow.jpeg" alt="logo"></a>
+                            <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
+                                <a href="index.html" class="barratexto">Home</a>  
+                                <a href="artistas.html" class="barratexto">Artistas</a>
+                                <a href="albumes.html" class="barratexto">Álbumes</a>
+                                <a href="generos.html" class="barratexto">Géneros</a>
+                                <a href="playlists.html" class="barratexto">Playlists</a>
+                                <div class="perfil-menu">
+                        <section class="icperfil">
+                                <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user">Log in</h1></a>
                         </section>
-                </nav>
-                </article>
-            </header>
+                </div>
+                        </div>
+                        <form action="search-results.html" method="GET" class="buscar">
+                            <input class= "b" id= "ba" type="text" name="search" placeholder = "Search">
+                            <button type="submit" class="button">Buscar</button>
+                    </form>
+                </section>
+        </nav>
+        </article>
+    </header>
     <main>
-        <section class="detallealbum">
-                <div class="album">
-                        <img class="fotoa" src="./img/changes.jpg" alt="">
-                        <h2 class="texto">Changes - Justin Bieber</h2>
-                        <p class="texto"> Lanzamiento: 14 de Febrero, 2020</p>
-                        <p class="texto">Generos: Pop, R&B contemporáneo, R&B alternativo</p>
-                        <ol class="listadetallealbum">
-                                <li>All Around Me</li>
-                                <li>Habitual</li>
-                                <li>Come Around Me</li>
-                                <li>Intentions</li>
-                                <li>Yummy</li>
-                                <li>Available</li>
-                                <li>Forever</li>
-                                <li>Running Over</li>
-                                <li>Take It Out On Me</li>
-                                <li>Second Emotion</li>
-                                <li>Get Me</li>
-                                <li>E.T.A.</li>
-                                <li>Changes</li>
-                                <li>Confirmation</li>
-                                <li>That's What Love Is</li>
-                                <li>At Least for Now</li>
-                                <li>Yummy (Summer Walker Remix)</li>
-                        </ol>      
-                </div>
-                <div class="album">
-                        <img class="fotoa" src="./img/x.jpg" alt="">
-                        <h2 class="texto">x (Deluxe Version) - Ed Sheeran</h2>
-                        <p class="texto"> Lanzamiento: 20 de junio de 2014</p>
-                        <p class="texto">Generos: Pop, R&B y hip hop</p>
-                        <ol class="listadetallealbum">
-                                <li>One</li>
-                                <li>I'm a Mess</li>
-                                <li>Sing</li>
-                                <li>Don't</li>
-                                <li>Nina</li>
-                                <li>Photograph</li>
-                                <li>Bloodstream</li>
-                                <li>Tenerife Sea</li>
-                                <li>Runaway</li>
-                                <li>The Man</li>
-                                <li>Thinking out Loud</li>
-                                <li>Afire Love</li>
-                                <li>Take It Back</li>
-                                <li>Shirtsleeves</li>
-                                <li>Even My Dad Does Sometimes</li>
-                                <li>I See Fire</li>
-                        </ol>      
-                </div>
-                <div class="album">
-                        <img class="fotoa" src="./img/evolve imagine dragons.jpg" alt="">
-                        <h2 class="texto">Evolve - Imagine Dragons</h2>
-                        <p class="texto"> Lanzamiento: 23 de junio de 2017</p>
-                        <p class="texto">Generos: Electro pop, Rock alternativo, Indie rock, Indie pop, Alternative dance, Synth pop, Indie electrónica</p>
-                        <ol class="listadetallealbum">
-                                <li>I Don't Know Why</li>
-                                <li>Whatever It Takes</li>
-                                <li>Believer</li>
-                                <li>Walking the Wire</li>
-                                <li>Rise Up</li>
-                                <li>I'll Make It Up to You</li>
-                                <li>Yesterday</li>
-                                <li>Mouth of the River</li>
-                                <li>Thunder</li>
-                                <li>Start Over</li>
-                                <li>Dancing in the Dark</li>
-                        </ol>      
-                </div>
-                <div class="album">
-                        <img class="fotoa" src="./img/tini.jpg" alt="">
-                        <h2 class="texto">TINI TINI TINI - Tini</h2>
-                        <p class="texto"> Lanzamiento: 3 de diciembre de 2020</p>
-                        <p class="texto">Generos: Pop, reguetón, balada, trap</p>
-                        <ol class="listadetallealbum">
-                                <li>Un beso en Madrid</li>
-                                <li>Fresa</li>
-                                <li>Si tú supieras</li>
-                                <li>Tuyo</li>
-                                <li>Te olvidaré</li>
-                                <li>Acércate</li>
-                                <li>Playa</li>
-                                <li>Ella Dice</li>
-                                <li>Duele</li>
-                                <li>Recuerdo</li>
-                                <li>Oye</li>
-                                <li>Diciembre</li>
-                                <li>Sueltate el pelo</li>
-                                <li>22</li>
-                        </ol>      
-                </div>
-                <div class="album">
-                        <img class="fotoa" src="./img/Heathens.jpg" alt="">
-                        <h2 class="texto">Heathens - Twenty One Pilots</h2>
-                        <p class="texto"> Lanzamiento: 16 de junio, 2016</p>
-                        <p class="texto">Generos: Rap rock</p>
-                        <ol class="listadetallealbum">
-                                <l>Purple Lamborghini</li>
-                                <li>Sucker for Pain</li>
-                                <li>Heathens</li>
-                                <li>Standing In The Rain </li>
-                                <li>Gangsta</li>
-                                <li>Know Better</li>
-                                <li>You Don't Own Me</li>
-                                <li>Without Me</li>
-                                <li>Super Freak</li>
-                                <li>Wreak Havoc</li>
-                                <li>Medieval Warfare</li>
-                                <li>Bohemian Rhapsody</li>
-                                <li>Slippin' Into Darkness</li>
-                                <li>Fortunate Son</li>
-                                <li>Spirit In The Sky</li>
-                                <li>I'd Rather Go Blind</li>
-                                <li>FI Started a Joke</li>
-                        </ol>      
-                </div>
-            </section>
+        <div class="detallealbum">
+                <h1>Justice</h1>
+                <img src="./img/justin-bieber-justice.jpeg" alt="" class="fotoj"> 
+                <p>Justice es el sexto álbum de estudio del cantante canadiense <a href="https://www.instagram.com/justinbieber/" class="names">Justin Bieber</a>. Se lanzó el 19 de marzo de 2021 a través de Def Jam Recordings.Es el primer álbum del artista en contener la etiqueta de Parental Advisory por contenido explícito. Se lanzaron previamente varios sencillos para promocionar el álbum, incluidos «Holy», «Lonely», «Anyone» y «Hold On».</p>
+                <iframe class="videoj"width="560" height="315" src="https://www.youtube.com/embed/p4w5Tv1yIlA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </main>
-    <footer> <div class="footer">
-                
+    <footer> <div class="footer">  
         <div class="instagram">
-                <div class="seguinos">Seguinos:</div>
+                <div class="names">Seguinos:</div>
                 <div>
                 <a href="https://www.instagram.com/"><img src="./img/instagram-logo-3.png" alt="instagram" class="instagram"></a>
                 </div>
