--- a/detail-track.html
+++ b/detail-track.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link  rel="icon"   href="img/logosoundnow.jpeg" type="image/png" />
-    <title>Detalles de la cancion</title>
+    <title>Detalles de la canción</title>
 </head>
 <body>
         <header>
@@ -18,7 +18,7 @@
                                     <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
                                         <a href="index.html" class="barratexto">Home</a>  
                                         <a href="artistas.html" class="barratexto">Artistas</a>
-                                        <a href="albumes.html" class="barratexto">Albumes</a>
+                                        <a href="albumes.html" class="barratexto">Álbumes</a>
                                         <a href="generos.html" class="barratexto">Géneros</a>
                                         <a href="playlists.html" class="barratexto">Playlists</a>
                                         <div class="perfil-menu">
@@ -38,9 +38,9 @@
     <main>
       <div class=detallestrack>
               <h3>Peaches</h3>
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/tQ0yjYUFKAE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe class="videoj"width="560" height="315" src="https://www.youtube.com/embed/tQ0yjYUFKAE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <ul>
-                <li>Artista: Justin Bieber</li>
+                <li>Artista: <a href="./detail-artist.html" class="names">Justin Bieber</a></li>
                 <li>Artista invitado: Daniel Caesar, Giveon</li>
                 <li>Álbum: Justice</li>
                 <li>Fecha de lanzamiento: 2021</li>
@@ -48,10 +48,9 @@
         </ul>
       </div>
     </main>
-    <footer> <div class="footer">
-                
+    <footer> <div class="footer">  
         <div class="instagram">
-                <div class="seguinos">Seguinos:</div>
+                <div class="names">Seguinos:</div>
                 <div>
                 <a href="https://www.instagram.com/"><img src="./img/instagram-logo-3.png" alt="instagram" class="instagram"></a>
                 </div>
