--- a/playlists.html
+++ b/playlists.html
@@ -18,7 +18,7 @@
                                     <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
                                         <a href="index.html" class="barratexto">Home</a>  
                                         <a href="artistas.html" class="barratexto">Artistas</a>
-                                        <a href="albumes.html" class="barratexto">Albumes</a>
+                                        <a href="albumes.html" class="barratexto">Álbumes</a>
                                         <a href="generos.html" class="barratexto">Géneros</a>
                                         <a href="playlists.html" class="barratexto">Playlists</a>
                                         <div class="perfil-menu">
@@ -35,24 +35,23 @@
                 </nav>
                 </article>
             </header>
-    <footer> <div class="footer">
-                
-        <div class="instagram">
-                <div class="seguinos">Seguinos:</div>
-                <div>
-                <a href="https://www.instagram.com/"><img src="./img/instagram-logo-3.png" alt="instagram" class="instagram"></a>
+            <footer> <div class="footer">  
+                <div class="instagram">
+                        <div class="names">Seguinos:</div>
+                        <div>
+                        <a href="https://www.instagram.com/"><img src="./img/instagram-logo-3.png" alt="instagram" class="instagram"></a>
+                        </div>
+                </div>
+        
+                <div class="equipo">
+                        <h3>Equipo:</h3>
+                        <ul class="miembros">
+                            <li class="nombre">Hania Achaval</li>
+                            <li class="nombre">Justina Basombrio</li>
+                            <li class="nombre">Malena Bensadon</li>
+                        </ul>
                 </div>
         </div>
-
-        <div class="equipo">
-                <h3>Equipo:</h3>
-                <ul class="miembros">
-                    <li class="nombre">Hania Achaval</li>
-                    <li class="nombre">Justina Basombrio</li>
-                    <li class="nombre">Malena Bensadon</li>
-                </ul>
-        </div>
-</div>
-         </footer>
-</body>
-</html>
+                 </footer>
+        </body>
+        </html>
