--- a/perfil.html
+++ b/perfil.html
@@ -18,7 +18,7 @@
                             <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
                                 <a href="index.html" class="barratexto">Home</a>  
                                 <a href="artistas.html" class="barratexto">Artistas</a>
-                                <a href="albumes.html" class="barratexto">Albumes</a>
+                                <a href="albumes.html" class="barratexto">Álbumes</a>
                                 <a href="generos.html" class="barratexto">Géneros</a>
                                 <a href="playlists.html" class="barratexto">Playlists</a>
                                 <div class="perfil-menu">
@@ -58,10 +58,9 @@
             </form> 
            <a href="index.html"class="volverainicio">Volver a inicio</a>
     </main>
-    <footer> <div class="footer">
-                
+    <footer> <div class="footer">  
         <div class="instagram">
-                <div class="seguinos">Seguinos:</div>
+                <div class="names">Seguinos:</div>
                 <div>
                 <a href="https://www.instagram.com/"><img src="./img/instagram-logo-3.png" alt="instagram" class="instagram"></a>
                 </div>
