--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
-    <link  rel="icon"   href="img/logosoundnow.jpeg" type="image/png" />
-    <title>  SOUND-NOW</title>
+    <link  class="logo"rel="icon" href="img/sound.jpg" type="image/png" />
+    <title>SOUND-NOW</title>
 </head>
 <body>
     <header>
@@ -14,7 +14,7 @@
             <nav class="header-items">
                 <section class="BarraDeBusqueda">
                         <div class="menu">
-                            <a href="index.html"><img class="logoheader" src="./img/logosoundnow.jpeg" alt="logo"></a>
+                            <a href="index.html"><img class="logo" src="./img/sound.jpg" alt="logo"></a>
                             <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
                                 <a href="index.html" class="barratexto">Home</a>  
                                 <a href="artistas.html" class="barratexto">Artistas</a>
