logo bien instagram tamb

--- a/artistas.html
+++ b/artistas.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
-    <link  rel="icon"   href="img/logosoundnow.jpeg" type="image/png" />
-    <title>Albumes</title>
+    <link  class="logo"rel="icon" href="img/sound1.jpg" type="image/png" />
+    <title>SOUND-NOW</title>
 </head>
 <body>
     <header>
@@ -14,7 +14,7 @@
             <nav class="header-items">
                 <section class="BarraDeBusqueda">
                         <div class="menu">
-                            <a href="index.html"><img class="logoheader" src="./img/logosoundnow.jpeg" alt="logo"></a>
+                            <a href="index.html"><img class="logo" src="./img/sound1.jpg" alt="logo"></a>
                             <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
                                 <a href="index.html" class="barratexto">Home</a>  
                                 <a href="artistas.html" class="barratexto">Artistas</a>
@@ -108,7 +108,7 @@
                 <div class="instagram">
                         <div class="names">Seguinos:</div>
                         <div>
-                        <a href="https://www.instagram.com/"><img src="./img/instagram-logo-3.png" alt="instagram" class="instagram"></a>
+                        <a href="https://www.instagram.com/soundnow_/"><img src="./img/instagram-logo-3.png" alt="instagram" class="instagram"></a>
                         </div>
                 </div>
         
