--- a/detail-album.html
+++ b/detail-album.html
@@ -45,7 +45,7 @@
         <div class="instagram">
                 <div class="names">Seguinos:</div>
                 <div>
-                <a href="https://www.instagram.com/"><img src="./img/instagram-logo-3.png" alt="instagram" class="instagram"></a>
+                <a href="https://www.instagram.com/soundnow_/"><img src="./img/instagram-logo-3.png" alt="instagram" class="instagram"></a>
                 </div>
         </div>
 
