--- a/generos.html
+++ b/generos.html
@@ -4,37 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link  rel="icon"   href="img/logosoundnow.jpeg" type="image/png" />
     <link rel="stylesheet" href="./css/styles.css">
-    <title>Generos</title>
+    <link  class="logo"rel="icon" href="img/sound1.jpg" type="image/png" />
+    <title>SOUND-NOW</title>
 </head>
 <body>
-        <header>
-                <article class="cajainicio">
-                    <nav class="header-items">
-                        <section class="BarraDeBusqueda">
-                                <div class="menu">
-                                    <a href="index.html"><img class="logoheader" src="./img/logosoundnow.jpeg" alt="logo"></a>
-                                    <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
-                                        <a href="index.html" class="barratexto">Home</a>  
-                                        <a href="artistas.html" class="barratexto">Artistas</a>
-                                        <a href="albumes.html" class="barratexto">Álbumes</a>
-                                        <a href="generos.html" class="barratexto">Géneros</a>
-                                        <a href="playlists.html" class="barratexto">Playlists</a>
-                                        <div class="perfil-menu">
-                                <section class="icperfil">
-                                        <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user">Log in</h1></a>
-                                </section>
-                        </div>
-                                </div>
-                                <form action="search-results.html" method="GET" class="buscar">
-                                    <input class= "b" id= "ba" type="text" name="search" placeholder = "Search">
-                                    <button type="submit" class="button">Buscar</button>
-                            </form>
+    <header>
+        <article class="cajainicio">
+            <nav class="header-items">
+                <section class="BarraDeBusqueda">
+                        <div class="menu">
+                            <a href="index.html"><img class="logo" src="./img/sound1.jpg" alt="logo"></a>
+                            <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
+                                <a href="index.html" class="barratexto">Home</a>  
+                                <a href="artistas.html" class="barratexto">Artistas</a>
+                                <a href="albumes.html" class="barratexto">Álbumes</a>
+                                <a href="generos.html" class="barratexto">Géneros</a>
+                                <a href="playlists.html" class="barratexto">Playlists</a>
+                                <div class="perfil-menu">
+                        <section class="icperfil">
+                                <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user">Log in</h1></a>
                         </section>
-                </nav>
-                </article>
-            </header>
+                </div>
+                        </div>
+                        <form action="search-results.html" method="GET" class="buscar">
+                            <input class= "b" id= "ba" type="text" name="search" placeholder = "Search">
+                            <button type="submit" class="button">Buscar</button>
+                    </form>
+                </section>
+        </nav>
+        </article>
+    </header>
     <div class="acaja">
             <h2 class="pag"> Géneros</h2>
             <section class="listas">
@@ -76,12 +76,11 @@
 </div>
    </section>
             </main>
-
             <footer> <div class="footer">  
                 <div class="instagram">
                         <div class="names">Seguinos:</div>
                         <div>
-                        <a href="https://www.instagram.com/"><img src="./img/instagram-logo-3.png" alt="instagram" class="instagram"></a>
+                        <a href="https://www.instagram.com/soundnow_/"><img src="./img/instagram-logo-3.png" alt="instagram" class="instagram"></a>
                         </div>
                 </div>
         
